# ai-ppt-platform

./: .eslintrc.js  .gitignore  .hooks.yml  ACCEPTANCE_CRITERIA.md  AGENTS.md  API_CONTRACT.md  API_CONTRACT_ENFORCEMENT.md  DEPS.md  HOOKS.md  LICENSE  PROJECT_STATE.md  README.md  login-page.html  openclaw-memory-implementation.md  task-queue.md
.context-compression/: RESUME.md  decisions.md  task-queue.md
.github/workflows/: code-standards.yml
.trae/rules/: project_rules.md
.trae/skills/tencent-code-guide/: SKILL.md
.trae/specs/add-data-visualization/: checklist.md  spec.md  tasks.md
.trae/specs/add-prompt-assistant-page/: checklist.md  spec.md  tasks.md
backend/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
backend/src/ai_ppt/: __init__.py  config.py  database.py  main.py
backend/src/ai_ppt/api/: deps.py
backend/src/ai_ppt/api/v1/: router.py
backend/src/ai_ppt/api/v1/endpoints/: auth.py  chart.py  chat.py  connectors.py  dashboard.py  exports.py  outlines.py  presentations.py  slides.py
backend/src/ai_ppt/api/v1/schemas/: auth.py  chart.py  chat.py  common.py  connector.py  dashboard.py  export.py  outline.py  presentation.py  slide.py
backend/src/ai_ppt/application/services/: __init__.py  connector_service.py  presentation_service.py  slide_service.py
backend/src/ai_ppt/core/: custom_types.py  security.py
backend/src/ai_ppt/domain/commands/: __init__.py  base.py  command_history.py  slide_commands.py
backend/src/ai_ppt/domain/models/: __init__.py  base.py  connector.py  outline.py  presentation.py  slide.py
backend/src/ai_ppt/domain/repositories/: __init__.py  base.py  connector.py  outline.py  slide.py
backend/src/ai_ppt/infrastructure/: config.py
backend/src/ai_ppt/infrastructure/ai/: __init__.py  client.py  models.py
backend/src/ai_ppt/infrastructure/ai/prompts/: outline_generation.j2  slide_enhancement.j2
backend/src/ai_ppt/infrastructure/connectors/: __init__.py  base.py  factory.py  mysql.py  salesforce.py
backend/src/ai_ppt/infrastructure/database/: session.py
backend/src/ai_ppt/infrastructure/repositories/: __init__.py  base.py  connector.py  outline.py  slide.py
backend/src/ai_ppt/models/: __init__.py  user.py
backend/src/ai_ppt/services/: __init__.py  chart_service.py  chat_service.py  export_service.py  outline_generation.py  outline_service.py
backend/src/ai_ppt/utils/: datetime.py
backend/tests/: conftest.py  conftest_chart.py
backend/tests/factories/: __init__.py
backend/tests/integration/: test_auth_api.py  test_chart_api.py  test_connector_api.py  test_export_api.py  test_outline_api.py  test_presentation_api.py  test_slide_api.py
backend/tests/unit/: test_ai_client.py  test_ai_models.py  test_auth_service.py  test_chart_service.py  test_commands_base.py  test_commands_history.py  test_commands_slide.py  test_config_security.py  test_connector_service.py  test_connectors_base.py  test_connectors_factory.py  test_connectors_mysql.py  test_connectors_salesforce.py  test_core_custom_types.py  test_core_security.py  test_database.py  test_domain_models_outline.py  test_domain_models_presentation.py  test_export_service.py  test_main.py  test_outline_generation.py  test_outline_service.py  test_presentation_service.py  test_repositories_base.py  test_repositories_connector.py  test_repositories_outline.py  test_repositories_slide.py  test_schemas.py  test_slide_service.py  test_utils_datetime.py
docker/: .env.example  README.md  backend.Dockerfile  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile
docs/: BACKEND_AGENT_ROLE.md  CI_FIX_REPORT_20250214.md  CODE_REVIEW_REPORT_20250213.md  CODE_REVIEW_REPORT_2_20250213.md  CODING_STANDARDS.md  CONTEXT_COMPRESSION_GUIDE.md  FRONTEND_AGENT_ROLE.md  MCP_CONFIGURATION.md  MCP_PROJECT_TEMPLATE.md  PROJECT_STATE.md  QA_ENGINEER_ROLE.md  REPAIR_PLAN_v1.md
docs/acceptance/: README.md
docs/acceptance/automated/: status-report.py  update-status.py
docs/acceptance/criteria/: 00-master-checklist.md
docs/acceptance/insights/: 20250213-first-insight.md
docs/acceptance/reports/: 20250213-first-acceptance-report.md
docs/acceptance/status/: status.json
docs/acceptance/templates/: subagent-checklist.md
docs/architecture/: API_CONTRACT.md
docs/dev-notes/backend/: 20250213-BE-001.md  20250213-BE-002.md
docs/dev-notes/frontend/: 20250213-FE-001.md  20250213-FE-002.md
docs/features/: AI_PROMPT_ASSISTANT.md  DATA_VISUALIZATION.md
docs/guides/: CODING_STANDARDS_QUICK_REF.md
docs/test-reports/: DATA_VISUALIZATION_TEST_REPORT.md
frontend/: .eslintrc.json  fix-eslint.sh  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/.husky/: pre-commit
frontend/__tests__/: setup.ts
frontend/__tests__/visualization/: ChartSelector.test.tsx  EChartsRenderer.test.tsx  FieldMapper.test.tsx  FileUploader.test.tsx
frontend/app/: globals.css  layout.tsx
frontend/app/connectors/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/outlines/: page.tsx
frontend/app/presentations/: page.tsx
frontend/app/register/: page.tsx
frontend/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/components/chat/: ChatInput.tsx  ChatMessage.tsx  PromptCard.tsx  QuickEntry.tsx  index.ts
frontend/components/connectors/: ConnectorCard.tsx  ConnectorForm.tsx  (+1 more)
frontend/constants/: animations.ts  dashboard.ts
frontend/e2e/: auth.spec.ts  navigation.spec.ts  outline.spec.ts
frontend/hooks/: useDashboard.ts
frontend/types/: auth.ts  connector.ts  outline.ts  presentation.ts  visualization.ts
frontend/utils/: helpers.ts
memory/: 2026-02-14-ci-fix.md
my-app/: README.md  package-lock.json  tailwind.config.js
my-app/app/: layout.tsx
my-app/types/: auth.ts
scripts/: acceptance-check.sh  auto-compress.sh  check-context.sh  check-contract.sh  security_scan.sh
scripts/hooks/: init.sh  on_ci_complete.sh  on_session_start.sh  on_task_complete.sh
tests/: test_export_api.sh  test_export_system.py
(+71 files in other folders)
