[tool.poetry]
name = "ai-ppt-platform"
version = "0.1.0"
description = "AI-powered PPT generation platform with data connector support"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ai_ppt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
httpx = "^0.28.0"
python-pptx = "^1.0.2"
reportlab = "^3.6.12"
jinja2 = "^3.1.0"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = ">=4.0,<5.0"
redis = "^5.2.0"
aiomysql = "^0.2.0"
aiofiles = "^24.1.0"
structlog = "^24.4.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.19.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
respx = "^0.21.0"
factory-boy = "^3.3.0"
faker = "^33.1.0"
mypy = "^1.13.0"
ruff = "^0.8.0"
pre-commit = "^4.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ========================================
# mypy 类型检查配置 - 遵循 PEP 8 规范
# ========================================
[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true
incremental = true
cache_dir = ".mypy_cache"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pptx.*", "reportlab.*"]
ignore_missing_imports = true

# ========================================
# ruff 代码检查配置 - 遵循 PEP 8 规范
# ========================================
[tool.ruff]
target-version = "py311"
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "D",   # pydocstyle
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EXE", # flake8-executable
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "INT", # flake8-gettext
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PL",  # Pylint
    "TRY", # tryceratops
    "FLY", # flynt
    "PERF", # Perflint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D107",   # missing docstring in __init__
    "ANN101", # missing type annotation for self in method
    "ANN102", # missing type annotation for cls in classmethod
    "ANN003", # missing type annotation for **kwargs
    "S101",   # use of assert detected
    "PLR0913", # too many arguments
    "TRY003", # avoid specifying long messages outside the exception class
    "COM812", # trailing comma missing (conflicts with formatter)
    "ISC001", # single-line implicit string concatenation (conflicts with formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["ai_ppt"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "S101", "PLR2004", "ARG"]
"__init__.py" = ["D104", "F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
indent-width = 4
line-ending = "lf"
docstring-code-format = true

# ========================================
# pytest 测试配置
# ========================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src"]
addopts = "-v --tb=short"

# ========================================
# flake8 配置 - 遵循 PEP 8 规范
# ========================================
[tool.flake8]
max-line-length = 79
max-doc-length = 72
ignore = ["E203", "W503", "E501"]
exclude = [".git", "__pycache__", ".venv", "venv", ".mypy_cache", "migrations"]

# ========================================
# coverage 覆盖率配置
# ========================================
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# ========================================
# black 格式化配置 - 遵循 PEP 8 规范
# ========================================
[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# ========================================
# isort 导入排序配置 - 遵循 PEP 8 规范
# ========================================
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["ai_ppt"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
